# SiriusAgentBrowser

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  easy_tests.txt  logs.db  memory_db.json  pyproject.toml  requirements.txt  start_agent.bat  start_agent.sh  start_agent.sh.bak  test_llm.py  test_stream_v2.py  wiki_screenshot.json
.github/workflows/: ci.yml
docs/: productivity_integration_research.md  technical_documentation.md  technical_documentation.md.old
extension/: background.js  manifest.json  offscreen.html  offscreen.js  permission.html  permission.js  sidepanel.html  sidepanel.js
notebooks/: 01_git_linting_clean_code.ipynb  02_secrets_venv_docker.ipynb
screenshots/: current_state.json  wiki_meta.json
scripts/: run_agent.ps1  run_agent.sh  run_server.ps1  run_server.sh  start_all.ps1  start_all.sh  start_chrome_debug.ps1  start_chrome_debug.sh
src/: __init__.py  logger_db.py  main.py  server.py
src/browser/: __init__.py  browser_controller.py  debug_wrapper.py  demo.py  handler.py
src/memory/: long_term_memory.py
src/orchestrator/: __init__.py  orchestrator.py
src/planner/: __init__.py  main.py  models.py  planner.py
src/tools/: base.py  calendar_integration.py  google_calendar_controller.py  notion_integration.py  search.py
src/vlm/: __init__.py  agent.py  example.env  main.py  readme.md  system_prompt.txt  vlm.py
temp/: search_results.html
tests/: easy_tests.txt  medium_tasks.txt  test_basic.py  test_requests.json
