[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sirius-agent-browser"
version = "0.1.0"
description = "Браузерный агент с VLM"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.0.0",
]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "RUF002", # ambiguous characters in docstrings (кириллица OK)
    "RUF003", # ambiguous characters in comments (кириллица OK)
]

[tool.ruff.lint.per-file-ignores]
# Ноутбуки — учебные материалы, ослабляем требования
"notebooks/*.ipynb" = [
    "E402",   # module level import not at top (OK в ноутбуках)
    "I001",   # unsorted imports (примеры для обучения)
    "ARG001", # unused arguments (примеры функций)
    "UP007",  # Use X | Y for type annotations (показываем старый стиль)
    "UP037",  # Remove quotes from type annotation
    "UP045",  # Use X | None (показываем Optional)
    "W293",   # blank line contains whitespace
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "PIL.*",
    "playwright.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

